deploy/k8s/with-deployment/nodulapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodulapi-deployment
  labels:
    label.app: nodulapp
    label.component: nodulapi
    label.object: nodulapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      label.object: nodulapi-pod
  template:
    metadata:
      labels:
        label.app: nodulapp
        label.component: nodulapi
        label.object: nodulapi-pod
    spec:
      volumes:
        - name: file-storage
          persistentVolumeClaim:
            claimName: nodulapi-pvc
      containers:
        - name: nodulapi
          image: dnrjpc/nodulapi:1
          ports:
            - containerPort: 5959
          volumeMounts:
            - name: file-storage
              mountPath: /tmp/nodulapp
