deploy/k8s/with-deployment/nodulfront-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodulfront-deployment
  labels:
    app.kubernetes.io/name: nodulapp
    app.kubernetes.io/component: nodulfront
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: nodulfront
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nodulapp
        app.kubernetes.io/component: nodulfront
    spec:
      containers:
        - name: nodulfront
          image: dnrjpc/nodulfront:1
          ports:
            - containerPort: 7474
