deploy/k8s/with-deployment/mongo-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-clusterip
  labels:
    app.kubernetes.io/name: nodulapp
    app.kubernetes.io/component: mongo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: mongo
  ports:
    - port: 27017
      targetPort: 27017
