deploy/k8s/with-deployment/nodulapi-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: nodulapi-clusterip
  labels:
    app.kubernetes.io/name: nodulapp
    app.kubernetes.io/component: nodulapi
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: nodulapi
  ports:
    - port: 6363
      targetPort: 3000
