deploy/k8s/with-deployment/nodulfront-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: nodulfront-clusterip
  labels:
    label.app: nodulapp
    label.component: nodulfront
spec:
  type: ClusterIP
  selector:
    label.object: nodulfront-pod
  ports:
    - port: 7171
      targetPort: 4000
