deploy/k8s/with-deployment/redis-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip
  labels:
    app.kubernetes.io/name: nodulapp
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: redis
  ports:
    - port: 6379
      targetPort: 6379
